[gd_scene load_steps=2 format=3 uid="uid://cdculuxm1cp0m"]

[ext_resource type="Script" uid="uid://b4bs02ryeg3eb" path="res://scripts/MapSelection.gd" id="1_0x0x0"]

[node name="MapSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Select a Map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Selected Character: Knight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefaultMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Training Grounds"

[node name="ForestMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Mystic Forest"

[node name="CastleMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Royal Castle"

[node name="DungeonMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Dark Dungeon"

[node name="ArenaMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Battle Arena"

[node name="DesertMapBtn" type="Button" parent="MapList"]
layout_mode = 2
text = "Desert Oasis"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Back to Character Selection"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "Select a map to begin"
horizontal_alignment = 1
